# pymeas2019_noise

./: .gitignore  .gitmodules  .pylintrc  20191129_peter_howto.txt  LICENSE  README.md  TOPDIR.TXT  config_common.py  config_measurements.py  config_measurements_.py  documentation_design_build.sh  file_1M_8e-6_labview_b.txt  helpers.py  jupyter_numpy_a.ipynb  jupyter_numpy_b.ipynb  leak_12_582_912.txt  leak_1_121_634_816.txt  library_filelock.py  library_gui.py  library_gui.wxg  library_gui.xrc  library_logger.py  library_plot.py  library_topic.py  peter periodogram test.py  program - Kopie.py  program.py  program.py.bak  program_classify.py  program_config_frequencies.py  program_config_instrument_picoscope.py  program_config_instrument_zhinst.py  program_configsetup.py  program_eseries.py  program_fir.py  program_fir_plot.py  program_instrument_picoscope5442D.py  program_instrument_zhinst.py  program_lockingmixin.py  program_measurement_stream.py  (+28 more)
.github/workflows/: deploy_build_measurement.yml
1_condensed/: data_DUT_gain_1.txt  data_calibrate_picoscope.txt  summary.txt
2019-12-01_peter_labview/: file_1M_1e-3_labview.txt  file_1M_8e-6_labview.txt
compact_measurement/: README.md  combinations.py  config_maerki-lenovo.py  config_maerki-probook-eth.py  config_maerki-probook_eth.py  config_probook470hombi.py  instruction_remember.txt  library_combinations.py  library_controller.py  library_measurement.py  library_measurement_controller.py  library_qualification.py  library_qualification_data.py  library_qualification_tolerances - Kopie.xlsx  library_qualification_tolerances.xlsx  library_stati.py  measurement.py  pymeas_qualification_template.xlsm  pyspreadsheet.py  run_measurements.bat  run_measurements.py  scanner_pyb_2020_example.py
documentation/: Design.md  README.md  README_ad_low_noise_float_2023.md  README_install_developer.md  README_install_user.md  jupyter_numpy_a.ipynb
documentation/background/: background.md
documentation/developer/: Design.md  DesignMultiprocessing.md  README.md  background_uv.md  compact_measurement.md
documentation/developer_diagrams/: classes_FIR.dot  classes_pymeas2019_noise.dot  packages_pymeas2019_noise.dot  run_diagrams.sh
documentation/images/: 20250629_ac_coupler_reference.odg
documentation_design/: README.md  classes_FIR.dot  classes_pymeas2019_noise.dot  packages_FIR.dot  packages_pymeas2019_noise.dot
measurement-actual/: config_measurement.py  config_plot.py  library_1_postprocess.py  library_filelock.py  library_gui.py  library_gui.wxg  library_gui.xrc  library_path.py  library_plot.py  library_tk.py  library_topic.py  run_0_measure.bat  run_0_measure.py  run_0_measure_animate.py  run_0_plot_interactive.bat  run_0_plot_interactive.py  run_0_plot_interactive_wx.py  run_1_capture_raw.bat  run_1_capture_raw.py  run_1_condense.bat  run_1_condense.py  run_1_process_raw.bat  run_1_process_raw.py  run_2_composite_plot_interactive.bat  run_2_composite_plot_interactive.py  run_2_composite_plots.bat  run_2_composite_plots.py  run_2_plot_composite.py  run_measure_synthetic.bat  run_measure_synthetic.py
measurement-actual-zhinst/: config_measurement.py  library_path.py  library_tk.py  run_0_plot_interactive.py  run_1_condense.bat  run_2_composite_plots.py
measurement-actual/raw-brown-demo/: densitystep_0_fast_00.pickle  densitystep_0_fast_01.pickle  (+32 more)
measurement-preamplifier_noise_2020/: run_0_measure.py  run_1_plot.py
measurement_34401A-actual/: config_measurement.py  config_plot.py  library_1_postprocess.py  library_path.py  run_0_plot_interactive.bat  run_0_plot_interactive.py  run_1_condense.py  run_2_composite_plots.py
measurement_actual/: config_plot.py  library_1_postprocess.py  library_path.py  run_0_gui.sh  run_0_measure.bat  run_0_measure.py  run_0_measure.sh  run_0_plot_interactive.bat  run_0_plot_interactive.py  run_0_plot_interactive.sh  run_1_condense.bat  run_1_condense.py  run_1_condense.sh  run_1_process_raw.bat  run_1_process_raw.py  run_1_process_raw.sh  run_2_composite_plots.bat  run_2_composite_plots.py  run_2_composite_plots.sh  run_9_install_uv.ps1  run_9_install_uv.sh  run_measure_synthetic.py
measurement_amplifier/: run_0_measure.bat  run_0_measure.py  run_1_plot.bat
peter/: todo.txt
pico_firmware/: ad_low_noise_float_2023.uf2
pymeas/: constants_ad_low_noise_float_2023.py  library_filelock.py  library_gui.py  library_logger.py  library_plot.py  library_plot_config.py  library_topic.py  program.py  program_classify.py  program_config_instrument_ad_low_noise_float_2023.py  program_config_instrument_keysight34401A.py  program_config_instrument_picoscope.py  program_configsetup.py  program_eseries.py  program_fir.py  program_fir_multiprocess.py  program_fir_plot.py  program_instrument_ad_low_noise_float_2023.py  program_instrument_capture_raw.py  program_instrument_keysight34401A.py  program_instrument_picoscope5442D.py  program_lockingmixin.py  program_lockingmixin_mock.py  program_measure.py  program_measurement_stream.py  program_settle.py
src/: library_gui.wxg  program.py  program_config_instrument_picoscope.py  program_config_instrument_zhinst.py  program_fir.py  program_instrument_picoscope5442D.py  program_instrument_zhinst.py
todo/: 20250721_notizen_samplerate_zu_tief.ods
wheels/: ad_low_noise_float_2023.uf2  ad_low_noise_float_2023_decoder-0.1.0-cp312-cp312-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.0-cp313-cp313-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.0-cp39-cp39-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.1-cp312-cp312-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.1-cp313-cp313-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.1-cp39-cp39-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.2-cp312-cp312-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.2-cp313-cp313-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.2-cp39-cp39-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.3-cp312-cp312-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.3-cp313-cp313-win_amd64.whl  ad_low_noise_float_2023_decoder-0.1.3-cp39-cp39-win_amd64.whl
(+80 files in other folders)
