[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pymeas2019_noise"

dynamic = ["version"]
description = "pymeas2019_noise"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    { name = "Hans Märki", email = "buhtig.hans.maerki@ergoinfo.ch" },
    { name = "Peter Märki", email = "github.com.public.peter@ergoinfo.ch" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
    "scipy>=1.15.3",
    "openpyxl>=3.0.5",
    "types-openpyxl>=3.0.5",
    "wxPython>=4.2.3",
    "types-wxpython",
    "pyserial>=3.5",
    "types-pyserial>=3.5",
    "pylint",
    "ruff",
    "mypy",
    "isort",
    "ad-low-noise-float-2023-decoder",
]

[project.urls]
Homepage = "https://github.com/nanophysics/pymeas2019_noise"
Documentation = "https://github.com/nanophysics/pymeas2019_noise"
Repository = "https://github.com/nanophysics/pymeas2019_noise"

# [[tool.uv.index]]
# name = "ad-low-noise-float-2023-decoder"
# url = "https://www.maerki.com/hans/download/pymeas2019_noise"
# 
# [tool.uv]
# allow-insecure-host = ["www.maerki.com"]

[tool.pdm]
version = { source = "file", path = "src/pymeas2019_noise/__init__.py" }
distribution = true

[tool.pdm.build]
package-dir = "src"
includes = [
    "src/pymeas2019_noise/",
]
source-includes = [
    "LICENSE",
    "README.md"
]

[tool.ruff]
target-version = "py313"
# All paths are relative to the project root, which is the directory containing the pyproject.toml.
src = ["src", "tests", "measurement_actual"]
exclude = []

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "I001", # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    # "W191",  # indentation contains tabs
    "D",     # enable docstring checks
    "B027",  #  empty method in an abstract base class
]

[tool.ruff.lint.per-file-ignores]
"pymeas2019_noise/__init__.py" = ["F401", "I001"]

[tool.ruff.lint.isort]
# known-third-party = ["usbhubctl"]
# known-local-folder = ["usbhubctl"]
case-sensitive = true
combine-as-imports = true
order-by-type = false
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.mypy]
# strict = true
# enable_incomplete_feature = ["NewGenericSyntax"]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ad_low_noise_float_2023_decoder.*"
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = '''
    broad-exception-caught,
    cyclic-import,
    fixme,
    import-outside-toplevel,
    invalid-name,
    line-too-long,
    logging-fstring-interpolation,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    too-few-public-methods,
    too-many-arguments,
    too-many-branches,
    too-many-instance-attributes,
    too-many-locals,
    too-many-nested-blocks,
    too-many-positional-arguments,
    too-many-return-statements,
    too-many-statements,
    unnecessary-lambda,
    unreachable,
    unspecified-encoding,
    unused-argument,
    using-constant-test,
    wrong-import-order,
'''
# too-many-positional-arguments,

[tool.pylint]
max-line-length = 88
disable = [
    "R0801", # Similar lines in 2 files
    "E1136", # unsubscriptable-object
]